# image_processing

./: CMakeLists.txt  Image.cpp  Image.h  ImageProcessing.cpp  ImageProcessing.h  Kernel.cpp  Kernel.h  LICENSE  PGMManager.cpp  PGMManager.h  PPMManager.cpp  PPMManager.h  PXXManager.cpp  PXXManager.h  main.cpp
.github/workflows/: cmake.yml
tests/: CMakeLists.txt  ImageProcessingTest.cpp  ImageTest.cpp  KernelTest.cpp  PGMTest.cpp  PPMTest.cpp  runAllTests.cpp
tests/assets/image_processing/: edge0.ppm  edge1.ppm  edge2.ppm  gauss-blur.ppm  original.ppm  sharp.ppm
tests/assets/pgm/: test-wrong-size-alpha.pgm  test.pgm  unsupported-magic.pgm  unsupported-maxval.pgm
tests/assets/ppm/: test-alpha.pgm  test.ppm  unsupported-magic.ppm  unsupported-maxval.ppm
